# ThermostatSupervisor

./: .buildinfo  .coveragerc  .dockerignore  .gitignore  .project  .pydevproject  .safety-policy.yml  .yamllint  =0.20.0  =1.1  =2.28.2  =5.9.5  BUILD_AND_RELEASE.md  CONTRIBUTING.md  DOCKER_SECURITY.md  Dockerfile  Dockerfile.secure  Honeywell.py  PRODUCTION_DEPLOYMENT.md  README.md  Supervise.py  UNIT_TEST_TOGGLE.md  __init__.py  azure-pipelines.yml  azure_context.py  conf.py  download_ssl_certificates.py  email_notification.py  emulator.py  emulator_config.py  flaskserver.py  genindex.html  gunicorn.sht31.conf.py  gunicorn.supervisor.conf.py  honeywell.py  honeywell_config.py  index.html  index.rst  kumocloud.py  kumocloud_config.py  (+47 more)
.github/: azure-pipelines.yml  copilot-instructions.md  dependabot.yml
_modules/: index.html
_static/: alabaster.css  basic.css  pygments.css
api/: overview.html  overview.rst  thermostat_api.html  thermostat_api.rst  thermostat_classes.html  thermostat_classes.rst  zone_classes.html  zone_classes.rst
docs/: SITE_SUPERVISE.md  ado-trigger-workflow.md  ado-usage-reduction.md  auto-version-increment.md  blink-user.md  build-and-release.md  modules.html  modules.rst  nest-token.md  nest-token.rst  src.html  src.rst  ssl-certificate-download.md  thermostatsupervisor.rst
examples/: sample_site_config.json  site_supervise_example.py  test_site_config.json
src/: __init__.py  blink.py  blink_config.py  email_notification.py  emulator.py  environment.py  honeywell.py  kumo_common_zones.py  kumocloud.py  kumocloud_config.py  kumocloudv3.py  kumocloudv3_config.py  kumolocal.py  kumolocal_config.py  mmm.py  nest.py  nest_config.py  sht31.py  sht31_config.py  sht31_flask_server.py  sht31_wsgi.py  site_config.py  site_supervise.py  ssl_certificate.py  supervise.py  supervisor_flask_server.py  supervisor_wsgi.py  thermostat_api.py  thermostat_common.py  thermostat_site.py  utilities.py  weather.py
supervisor/: __init__.py  azure_context.py  email_notification.py  honeywell.py  honeywell_config.py  kumocloud.py  kumocloud_config.py  kumolocal.py  mmm.py  sht31.py  sht31_flask_server.py  supervise.py  supervisor_flask_server.py  thermostat_api.py  thermostat_common.py  utilities.py
test/: .coveragerc  test_email_notification.py  test_honeywell_integration.py  test_kumocloud_integration.py  test_kumolocal_integration.py  test_mmm_integration.py  test_sht31_flask_server.py  test_sht31_integration.py  test_supervise.py  test_supervisor_flask_server.py  test_thermostat_api.py  test_thermostat_common.py  test_utilities.py  unit_test_common.py  unit_test_coverage.py
tests/: .coveragerc  __init__.py  context.py  test_ado_reduction.py  test_blink_2fa_logging.py  test_blink_integration.py  test_css_sorting.py  test_download_ssl_certificates.py  test_duplicate_stdout_fix.py  test_email_notification.py  test_emulator_integration.py  test_environment.py  test_environment_version_detection.py  test_flask_generic.py  test_honeywell_integration.py  test_honeywell_unit.py  test_kumocloud_integration.py  test_kumocloud_unit.py  test_kumocloudv3_integration.py  test_kumocloudv3_unit.py  test_kumolocal_integration.py  test_kumolocal_unit.py  test_mmm_integration.py  test_nest_config_unit.py  test_nest_env_integration.py  test_nest_env_token_cache_unit.py  test_nest_fan_timer_mode_unit.py  test_nest_integration.py  test_nest_oauth_refresh_unit.py  test_nest_safety_temperature_unit.py  test_nest_spam_mitigation_unit.py  test_sht31_empty_ip.py  test_sht31_enhanced_403_unit.py  test_sht31_flask_server.py  test_sht31_flask_server_integration.py  test_sht31_flask_server_unit.py  (+22 more)
(+155 files in other folders)
