[flake8]
max-line-length = 80
# known-modules used by flake8-requirements plugin
# this content could be moved to a .flake8 module if needed
# https://pypi.org/project/flake8-requirements/
# dns is a built-in pkg that comes up as a warning so it is included in the list below
known-modules = :[dns,emulator,email_notification,emulator_config,honeywell,honeywell_config,kumocloud,kumocloud_config,kumolocal,kumolocal_config,mmm,mmm_config,sht31,sht31_config,supervise,supervisor_flask_server,thermostat_api,thermostat_common,unit_test_common,utilities]

[metadata]
name = thermostatsupervisor
version = 0.0.1
author = Christopher Krolak
author_email = cjkrolak@gmail.com
description = Monitor remote thermostats and correct deviations from schedule.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cjkrolak/ThermostatSupervisor
# project_urls =
#    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = thermostatsupervisor
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .
