[flake8]
# black compatibility: line length 88
max-line-length = 88
# E203: ignore whitespace before :, side effect of black formatting
# E704: ignore multiple statements on one line, side effect of black formatting
# E731: ignore lambdas
extend-ignore = E203,E704,E731
# known-modules used by flake8-requirements plugin
# this content could be moved to a .flake8 module if needed
# https://pypi.org/project/flake8-requirements/
# dns is a built-in pkg that comes up as a warning so it is included in the list below
known-modules = :[dns, blink, blink_config, email_notification, emulator, emulator_config, environment,
                  honeywell, honeywell_config, kumocloud, kumocloud_config, kumocloudv3,
                  kumocloudv3_config, kumolocal, kumolocal_config, mmm, mmm_config, nest, nest_config, sht31, sht31_config,
                  sht31_flask_server, supervise, supervisor_flask_server, thermostat_api, thermostat_common,
                  unit_test_common, utilities]

[metadata]
name = Thermostatsupervisor
# version = 0.0.0 will read version from package __init__  
author = Christopher Krolak
author_email = cjkrolak@gmail.com
description = Monitor remote thermostats and correct deviations from schedule.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cjkrolak/ThermostatSupervisor
# project_urls =
#    Bug Tracker = 
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Environment :: Console
    Framework :: Flask
    Framework :: IDLE
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Home Automation

[options]
# package_dir variable was causing issue with build.py, so rem'd it out, not sure if this will
# break something else or not.
# package_dir =
#    = thermostatsupervisor
packages = find:
python_requires = >=3.9
install_requires = 
    dnspython
    munch
    psutil

keywords = 
    thermostat
    automation
    supervise

[options.packages.find]
where = .
